# ecm-evolutionary-optimization

./: .gitignore  README.md  core.112293  core.116857  core.33854  ecm_plan-6967265.err  ecm_plan-6967265.out  ecm_plan-6973139.err  ecm_plan-6973139.out  ecm_plan-6977100.err  ecm_plan-6977100.out  ecm_plan-6977771.err  ecm_plan-6977771.out  ecm_plan-6978011.err  ecm_plan-6978011.out  pyproject.toml  requirements.txt  run_ecm_plan.slurm  run_ecm_plan_multinode.slurm  sacct_full_history.csv  setup.py
REPORTS/: README.md  glossary.md
REPORTS/01_research_internship_fall_2025/: individual_plan_fall_2025.md  internship_report_fall_2025.md
REPORTS/02_research_internship_spring_2026/: individual_plan_spring_2026.md  internship_report_spring_2026.md
REPORTS/03_technological_internship_spring_2026/: individual_plan_technological_spring_2026.md  internship_report_technological_spring_2026.md
REPORTS/04_pre_graduation_internship_spring_2026/: individual_plan_pre_graduation_spring_2026.md  internship_report_pre_graduation_spring_2026.md
data/: smoke30_control.txt  smoke30_manifest.csv  smoke30_train.txt
docs/: analysis_module_modernization_todo_ru.md  experiment_results_journal_ru.md  first_full_run_analysis_ru.md  fitness_function_principle_ru.md  full_runs_analysis_ru.md  research_plan_ru.md
ecm_optimizer/: __init__.py  config.py  models.py  reporting.py
results/: optimize_20260227T182946Z.json  validate_20260227T183502Z.json
tests/: test_analysis_pipeline_outputs.py  test_analysis_stats.py  test_optimization_reporting.py  test_particle_swarm.py
(+3859 files in other folders)
