[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecm-evolutionary-optimization"
version = "0.1.0"
description = "Toolkit for evolutionary optimization of ECM parameters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.scripts]
ecm-optimizer = "ecm_optimizer.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ecm_optimizer*"]
